homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: homepage-becutewith-me
  namespace: homepage
spec:
  hostnames:
  - becutewith.me
  parentRefs:
  - name: gateway
    namespace: gateway
  rules:
  - backendRefs:
    - name: homepage
      port: 4001
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
